--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,21 @@
-annotated-types==0.6.0
-astroid==3.0.2
-coverage==7.4.1
+astroid==3.3.4
+coverage==7.6.1
 dill==0.3.8
-exceptiongroup==1.2.0
-Faker==23.1.0
+exceptiongroup==1.2.2
+Faker==30.1.0
 iniconfig==2.0.0
-install==1.3.5
 isort==5.13.2
 mccabe==0.7.0
-numpy==1.26.4
-packaging==23.2
-pandas==2.2.1
-platformdirs==4.1.0
-pluggy==1.4.0
-pydantic==2.6.3
-pydantic_core==2.16.3
-pylint==3.0.3
-pylint-pytest==1.1.7
-pytest==8.0.0
-pytest-cov==4.1.0
+packaging==24.1
+platformdirs==4.3.6
+pluggy==1.5.0
+pylint==3.3.1
+pytest==8.3.3
+pytest-cov==5.0.0
 pytest-pylint==0.21.0
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2024.1
 six==1.16.0
 tomli==2.0.1
-tomlkit==0.12.3
-typing_extensions==4.9.0
-tzdata==2024.1
+tomlkit==0.13.2
+typing_extensions==4.12.2
